made website responsive

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <h2>Phone Bazaar</h2>
           <div class="search-container">
             <img
-            class="searching-img"
-            src="./public/searching logo.png"
-            alt="searching-btn"
+              class="searching-img"
+              src="./public/searching-logo.png"
+              alt="searching-btn"
             />
             <input type="text" placeholder="Search" class="search-bar" />
           </div>
@@ -30,74 +30,98 @@
       </div>
     </nav>
     <!-- navigation bar end -->
-     
+
     <!-- carosal -->
-     <div class="carosal-container">
-       <i class="fa-solid fa-arrow-left backward-arrow-btn"></i>
-       <img src="" alt="carosal image" class="carosal-image">
-       <i class="fa-solid fa-arrow-right forward-arrow-btn"></i>
-     </div>
+    <div class="carosal-container">
+      <i class="fa-solid fa-arrow-left backward-arrow-btn"></i>
+      <img
+        src="./public/slider/img-1.jpg"
+        alt="carosal image"
+        class="carosal-image"
+      />
+      <i class="fa-solid fa-arrow-right forward-arrow-btn"></i>
+    </div>
     <!-- carosal End-->
 
     <!-- Product start -->
-    
-     <div class="product-heading"><h1>Products</h1></div>
+
+    <div class="product-heading">
+      <h1>Products</h1>
+    </div>
     <div class="product-container">
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17-pro-jpg.webp" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17-pro-jpg.webp"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17-pro-jpg.webp" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17-pro-jpg.webp"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17-pro-jpg.webp" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17-pro-jpg.webp"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17-pro-jpg.webp" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17-pro-jpg.webp"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17-pro-jpg.webp" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17-pro-jpg.webp"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-        <div class="image-container">
-          <img src="./public/Product-img/iphone-17.avif" alt="Product-img" class="Product-img">
-          <div class="product-contant-container">
-
-            <h3 class="product-title">IPhone-13</h2>
-              <h5 class="product-brand">Apple</h3>
-                <h5 class="product-price">Rs= 89499</h3>
-          </div>
+      </div>
+      <div class="image-container">
+        <img
+          src="./public/Product-img/iphone-17.avif"
+          alt="Product-img"
+          class="Product-img"
+        />
+        <div class="product-contant-container">
+          <h3 class="product-title">IPhone-13</h3>
+          <h5 class="product-brand">Apple</h5>
+          <h5 class="product-price">Rs= 89499</h5>
         </div>
-     </div>
+      </div>
+    </div>
     <!-- Product end -->
     <!-- Login & signup start -->
     <div class="auth-model">
@@ -152,38 +176,41 @@
     </div>
 
     <footer class="footer-container">
-    <div class="footer">
-      <div class="about-us">
-        <h3>About Us</h3>
-        <p>We provide the best solutions for your needs <br> with top quality services and support.</p>
-      </div>
-      <div class="quick-links">
-        <h3>Quick Links</h3>
-        <a class="quick-links-text" href="#">Home</a>
-        <a class="quick-links-text" href="#">Services</a>
-        <a class="quick-links-text" href="#">About</a>
-        <a class="quick-links-text" href="#">Contact</a>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <p>Email: tahirkhankayamkhani1@gmail.com</p>
-        <p>Phone: +91 8000302864</p>
-      </div>
-      <div class="follow-us">
-        <h3>Follow Us</h3>
-        <div class="social-icons">
-          <a href="#">🌐</a>
-          <a href="#">📘</a>
-          <a href="#">🐦</a>
-          <a href="#">📸</a>
+      <div class="footer">
+        <div class="about-us grid-footer-item">
+          <h3>About Us</h3>
+          <p>
+            We provide the best solutions for your needs
+            with top quality services and support.
+          </p>
+        </div>
+        <div class="quick-links grid-footer-item">
+          <h3>Quick Links</h3>
+          <a class="quick-links-text" href="#">Home</a>
+          <a class="quick-links-text" href="#">Services</a>
+          <a class="quick-links-text" href="#">About</a>
+          <a class="quick-links-text" href="#">Contact</a>
+        </div>
+        <div class="grid-footer-item">
+          <h3>Contact</h3>
+          <p>tahirkhankayamkhani1@gmail.com</p>
+          <p>Phone: +91 8000302864</p>
+        </div>
+        <div class="follow-us grid-footer-item">
+          <h3>Follow Us</h3>
+          <div class="social-icons">
+            <a href="#">🌐</a>
+            <a href="#">📘</a>
+            <a href="#">🐦</a>
+            <a href="#">📸</a>
+          </div>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="footer-bottom">
-      &copy; 2025 X-Factor. All rights reserved.
-    </div>
-  </footer>
+      <hr />
+      <div class="footer-bottom">
+        &copy; 2025 X-Factor. All rights reserved.
+      </div>
+    </footer>
 
     <!-- Login & signup end -->
 
